lisatud stiili klass kõrvuti, mis laseb panna tekstikaste kõrvuti, seda kasutan ülemisele ribal

--- a/rasmuse_vaheleht.html
+++ b/rasmuse_vaheleht.html
@@ -12,8 +12,18 @@
 <br>
 <br>
 
+
 <div class="ülemine">
-    <p>Siin olev on naelutatud tippu, toppige tekstikaste ja linke</p>
+    <div class="kõrvuti">
+        <p>Siin olev on naelutatud tippu, toppige tekstikaste ja linke</p> 
+    </div>
+    <div class="kõrvuti">
+        <p>Siin on teine kast</p>
+    </div>
+    <div class="kõrvuti">
+        <a href="https://moodle.ut.ee/my/">Moodle</a>
+    </div>
+    
 </div>
 
 <p>tekst missugune</p> <!-- See rida potentsiaalselt -->
