lingid nüüd kastides, bodyl on taustapilt

--- a/rasmuse_vaheleht.html
+++ b/rasmuse_vaheleht.html
@@ -14,25 +14,36 @@
 
 
 <div class="ülemine">
+
     <div class="kõrvuti">
-        <p>Siin olev on naelutatud tippu, toppige tekstikaste ja linke</p> 
+        <a id="lingikast" href="https://ois2.ut.ee/#/dashboard">ÕIS</a> 
     </div>
+
     <div class="kõrvuti">
-        <p>Siin on teine kast</p>
+        <a id="lingikast" href="https://www.facebook.com/events/469990024322553/?acontext=%7B%22event_action_history%22%3A[%7B%22mechanism%22%3A%22your_upcoming_events_unit%22%2C%22surface%22%3A%22bookmark%22%7D]%2C%22ref_notif_type%22%3Anull%7D">MINGE SINNA ÜRITUSELE</a> 
     </div>
+    
     <div class="kõrvuti">
-        <a href="https://moodle.ut.ee/my/">Moodle</a>
+        <a id="lingikast" href="https://moodle.ut.ee/my/">Moodle</a>
     </div>
     
 </div>
-
-<p>tekst missugune</p> <!-- See rida potentsiaalselt -->
+<div class="eemale">
+    <h1>NEPTUUN</h1> <!--Siin on pealkiri-->
+</div>
 
 <div class="rida"> <!-- Kogu see süsteem on alati kuidagi tulpadega nihkes, kuid ma ei usu, et see takistab lehekülje ilusust, kui takistab, tuleb mõelda-->
 
     <div class="tulp">
 
         <div class="eemale">
+            <p>Neptuun on suht aus planeet</p>
+            <p>Siin asub kogu parempoolne tekst</p>
+            <p>Siin asub kogu parempoolne tekst</p>
+            <p>Siin asub kogu parempoolne tekst</p>
+            <p>Siin asub kogu parempoolne tekst</p>
+            <p>Siin asub kogu parempoolne tekst</p>
+            <p>Siin asub kogu parempoolne tekst</p>
             <p>Siin asub kogu parempoolne tekst</p>
             <p>Siin asub kogu parempoolne tekst</p>
             <p>Siin asub kogu parempoolne tekst</p>
@@ -45,6 +56,9 @@
 
     <div class="keskele">
         <p>Siin võiks olla retsept, pilt ja taoline värk</p>
+        <br>
+        <br>
+        <div class="minitekst">animatsioon pls</div>
     </div>
     <!-- Selles sektsioonis ei tohiks kindasti olla asju, mis lähevad mõõtmetest välja, siis ei saa hakkama
     Tegelikult peaks ülalolev lause ka olema erinevas "tulp" klassis, kuid millegipärast töötab see tulpade süsteem just nii-->
