--- a/taavi_vaheleht.html
+++ b/taavi_vaheleht.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Maa</title>
+    <!--Ikoon saadud https://www.flaticon.com/premium-icon/earth_2949040-->
+    <link rel="icon" href="images/maa.png">
     <link rel="stylesheet" type="text/css" href="taavi.css" />
     <link rel="stylesheet" href="projekti_stiil.css">
 </head>
@@ -31,13 +33,14 @@
     <!--Siit hakkab vasakpoolne tulp-->
     <div class="tulp_vasak">
         <div class="eemale_parem">
+            <!--Siin on video-->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/HCDVN7DCzYE"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
-
+            <!--Tekitab kahe asja vahele tühja ruumi-->
             <div class="tühi_ruum"></div>
-
+            <!--Maa gif-->
             <img src="https://c.tenor.com/Ads2Jl3bE-UAAAAC/nasa-our-home.gif" alt="Maa gif"/>
         </div>
     </div>
@@ -45,20 +48,28 @@
     <!--Siit hakkab parempoolne tulp-->
     <div class="tulp_parem">
         <div class="eemale_parem">
-            <h2>SELLE TEKSTI TEEN HILJEM</h2>
-            <p>SELLE TEKSTI TEEN HILJEM</p>
-            <p>SELLE TEKSTI TEEN HILJEM</p>
-            <p>SELLE TEKSTI TEEN HILJEM</p>
+            <h2>Meie planeet on ainulaadne</h2>
+            <p>Praeguste teadmiste järgi on meie planeet Maa ainus universumis, 
+                kus esineb elu
+            </p>
+            <p>Samuti saab öelda, et meie planeet on jällegi ainus,
+                millel esineb laamtektoonika
+            </p>
+            <p>Planeet Maa asub päikesesüsteemi kuldses piirkonnas,
+                kus ei ole liiga kuum ega külm, ehk vesi saab eksisteerida vedelikuna
+            </p>
             <br>
-            <h2>SELLE TEKSTI TEEN HILJEM</h2>
-            <p>SELLE TEKSTI TEEN HILJEM</p>
-            <p>SELLE TEKSTI TEEN HILJEM</p>
-            <p>Üks TEKST on 165 aastat HILJEM</p>
+            <h2>Suurused ja võrdlused</h2>
+            <p>Meie päikesesüsteemis on Maa suuruse ja massi poolest viies planeet</p>
+            <p>Neptuuni mahuks 57 ja Saturni mahuks 700 Maad</p>
+            <p>Umbes 71% Maa pinnast on kaetud veega</p>
             <br>
-            <h2>Fun fact</h2>
-            <p>SELLE TEKSTI TEEN HILJEM</p>
-            <p>SELLE TEKSTI TEEN HILJEM</p>
-            <p>SELLE TEKSTI TEEN HILJEM</p>
+            <h2>Fun fact time</h2>
+            <p>Tegelikult on Maal keskmine ööpäev 23 tundi ja 56 minutit</p>
+            <p>Maa on meie päikesesüsteemis ainuke planeet, mille nimi ei tulene
+                Kreeka või Rooma mütoloogiast 
+            </p>
+            <p>Maa peal eksisteerib rohkem viiruseid kui universumis on tähti</p>
         </div>
     </div>
 </div>
