--- a/kaarli_vaheleht.html
+++ b/kaarli_vaheleht.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Saturn</title>
+    <!--Ikooni link: https://www.flaticon.com/free-icon/planet_3336008 -->
     <link rel="icon" href="images/saturn.png">
     <link rel="stylesheet" type="text/css" href="kaarel.css" />
     <link rel="stylesheet" href="projekti_stiil.css">
@@ -31,7 +32,27 @@
     <!--Siit hakkab vasakpoolne tulp-->
     <div class="tulp_vasak">
         <div class="eemale_vasak">
-            <h2>Pealkiri1</h2>
+            <h2>Mis teeb Saturni eriliseks?</h2>
+            <p>Saturnil on 82 kuud, millest 53 on kinnitatud ja nimetatud</p>
+            <p>Saturni kuul Enceladusel esineb vedelal kujul vett ja sellel<br>
+            võivad suure tõenäosusega olla sobivad tingimused eluks</p>
+            <p>Saturi tihedus on väiksem kui Maa peal oleva vee tihedus</p>
+            <p>Oma väikse tiheduse ja kiire pöörlemise tõttu on ta teistest<br>
+            päikekesesüsteemi planeetidest lapikum</p>
+
+            <h2>Võrdlus teistega</h2>
+            <p>Saturn on Päikesesüsteemi suuruselt teine planeet,<br>
+                jäädes massilt ja mõõtmetelt alla vaid Jupiterile
+            </p>
+            <p>Kõige hõredam planeet meie planeedisüsteemis</p>
+            <p>Ööpäev Saturnil on üle kahe korra kiirem, kui Maal</p>
+
+            <h2>Fun facts</h2>
+            <p>On võimalik palja silmaga näha</p>
+            <p>Saturnil puudub tahke pind</p>
+            <p>Saturni rõngad on võrreldes nende läbimõõduga<br>
+            sadu kordi õhem, kui näiteks A4 paber</p>
+            <p>Saturn kiirgab 2,5 korda rohkem energiat, kui ta seda päikeselt saab. Enamus sellest tuleneb aeglasest gravitatsioonilisest kokkusurumisest</p>
         </div>
     </div>
 
@@ -44,8 +65,8 @@
             </iframe>
 
             <div class="tühi_ruum"></div>
-            
-            <img src="https://i.gifer.com/7YUM.gif" alt="Saturni gif"/>
+            <!--algne GIF saadud: https://vsgif.com/gif/1504161 -->
+            <img IMG SRC="images/saturn.gif" alt="Saturni gif"/>
             
         </div>
     </div>
