enda branchi kaarli leht ja stiil

--- a/rasmuse_vaheleht.html
+++ b/rasmuse_vaheleht.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Neptuun</title>
+    <link rel="icon" href="images/neptuun.png"/>
     <link rel="stylesheet" type="text/css" href="rasmus.css" />
     <link rel="stylesheet" href="projekti_stiil.css">
 </head>
@@ -66,7 +67,8 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
             </iframe>
-
+            
+            <!--video ja gifi vahe ruum-->
             <div class="tühi_ruum"></div>
             
             <img src="https://thumbs.gfycat.com/GoodGlisteningDutchshepherddog-size_restricted.gif" alt="Neptuuni gif"/>
