Parandused, et validaatorist läbi läheks

--- a/kaarli_vaheleht.html
+++ b/kaarli_vaheleht.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> <!--Et validaatorile sobiks-->
 
 <head>
+    <meta charset="utf-8"/> <!--declareb encodingu (et validaatorile sobiks)-->
+
     <title>Saturn</title>
     <!--Ikooni link: https://www.flaticon.com/free-icon/planet_3336008 -->
     <link rel="icon" href="images/saturn.png">
@@ -37,7 +39,7 @@
             <p>Saturni kuul Enceladusel esineb vedelal kujul vett ja sellel<br>
             võivad suure tõenäosusega olla sobivad tingimused eluks</p>
             <p>Saturi tihedus on väiksem kui Maa peal oleva vee tihedus</p>
-            <p>Oma väikse tiheduse ja kiire pöörlemise tõttu on ta teistest<br>
+            <p>Oma väikse tiheduse ja kiire pöörlemise tõttu on ta teistest
             päikekesesüsteemi planeetidest lapikum</p>
 
             <h2>Võrdlus teistega</h2>
@@ -66,7 +68,7 @@
 
             <div class="tühi_ruum"></div>
             <!--algne GIF saadud: https://vsgif.com/gif/1504161 -->
-            <img IMG SRC="images/saturn.gif" alt="Saturni gif"/>
+            <img src="images/saturn.gif" alt="Saturni gif"/>
             
         </div>
     </div>
