validaatori jaoks vigade parandus

--- a/rasmuse_vaheleht.html
+++ b/rasmuse_vaheleht.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> <!--Et validaatorile sobiks-->
 
 <head>
+    <meta charset="utf-8"/> <!--declareb encodingu (et validaatorile sobiks)-->
     <title>Neptuun</title>
     <link rel="stylesheet" type="text/css" href="rasmus.css" />
     <link rel="stylesheet" href="projekti_stiil.css">
