--- a/taavi_vaheleht.html
+++ b/taavi_vaheleht.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> <!--Et validaatorile sobiks-->
 
 <head>
+    <meta charset="utf-8"/> <!--declareb encodingu (et validaatorile sobiks)-->
     <title>Maa</title>
     <!--Ikoon saadud https://www.flaticon.com/premium-icon/earth_2949040-->
     <link rel="icon" href="images/maa.png">
