piirideta GIFid ja ikoon pealehel

--- a/pealeht.html
+++ b/pealeht.html
@@ -3,6 +3,7 @@
     <head>
         <title>Vahvad planeedid</title>
         <meta charset=UTF-8 />
+        <link rel="icon" href="images/galaxy.png"/>
         <link rel="stylesheet" type="text/css" href="pealehe_stiil.css"/>
     </head>
     <body>
