--- a/rasmuse_vaheleht.html
+++ b/rasmuse_vaheleht.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Neptuun</title>
+    <!--Ikoon saadud -->
     <link rel="icon" href="images/neptuun.png"/>
     <link rel="stylesheet" type="text/css" href="rasmus.css" />
     <link rel="stylesheet" href="projekti_stiil.css">
@@ -44,7 +45,7 @@
             <p>Seetõttu on see ka ainus päikesesüsteemi planeet, mis on avastatud
                 matemaatilise ennustuse, mitte vaatluse abil.</p>
             <br>
-            <h2>Gabariidid vms</h2>
+            <h2>Gabariidid</h2>
             <p>Neptuun on päikesesüsteemis läbimõõdus neljas ning massis kolmas planeet</p>
             <p>Neptuun on ligikaudu 17 korda raskem kui Maa</p>
             <p>Üks aasta Neptuunil on 165 aastat Maal</p>
@@ -71,7 +72,7 @@
             <!--video ja gifi vahe ruum-->
             <div class="tühi_ruum"></div>
             
-            <img src="https://thumbs.gfycat.com/GoodGlisteningDutchshepherddog-size_restricted.gif" alt="Neptuuni gif"/>
+            <img src="images/Neptuuni_gif.gif" alt="Neptuuni gif"/>
             
             <div class="minitekst">Neptuun pöörlemas</div>
         </div>
