Images kausta taustata maa gif ja implementeeriud vahelehte

--- a/taavi_vaheleht.html
+++ b/taavi_vaheleht.html
@@ -41,7 +41,7 @@
             <!--Tekitab kahe asja vahele tühja ruumi-->
             <div class="tühi_ruum"></div>
             <!--Maa gif-->
-            <img src="https://c.tenor.com/Ads2Jl3bE-UAAAAC/nasa-our-home.gif" alt="Maa gif"/>
+            <img src="images/Maa_gif.gif" alt="Maa gif"/>
         </div>
     </div>
 
