--- a/pealeht.html
+++ b/pealeht.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"><!--validaator-->
     <head>
         <title>Vahvad planeedid</title>
         <meta charset=UTF-8 />
@@ -14,19 +14,19 @@
         <div >
             <a id="saturn" href="kaarli_vaheleht.html">
                 <!--Saturni pildi link: https://www.stickpng.com/img/nature/space/planets/saturn -->
-                <img src="images/saturn_pealeht.png" height=300>
+                <img src="images/saturn_pealeht.png" height=300 alt="Saturni pilt">
             </a>
         </div>
         <div >
             <a id="maa" href="taavi_vaheleht.html">
-                <!--Maa pildi link: https://pngpress.com/uploads-earth-earth-png32/ -->
-                <img src="images/maa_pealeht.png" height=300>
+                <!--Maa pildi link: upload.wikimedia.org/wikipedia/commons/2/22/Earth_Western_Hemisphere_transparent_background.png -->
+                <img src="images/maa_pealeht.png" height=300 alt="Maa pilt">
             </a>
         </div>
         <div>
             <a id="neptuun" href="rasmuse_vaheleht.html">
                 <!--Neptuuni pildi link: https://nineplanets.org/ -->
-                <img src="images/neptuun_pealeht.png" height=300>
+                <img src="images/neptuun_pealeht.png" height=300 alt="Neptuuni pilt">
             </a>
         </div>
         <script src="three.min.js"></script>
