--- a/rasmuse_vaheleht.html
+++ b/rasmuse_vaheleht.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> <!-- Et validaatorile sobiks -->
 
 <head>
+    <meta charset="utf-8"/> <!--declareb encodingu (et validaatorile sobiks)-->
+    
     <title>Neptuun</title>
     <!--Ikoon saadud -->
     <link rel="icon" href="images/neptuun.png"/>
