iframe projekti_stiili, lõplik kaasajastamine

--- a/kaarli_vaheleht.html
+++ b/kaarli_vaheleht.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en"> <!-- et validaatorile sobiks -->
 
 <head>
+    <meta charset="utf-8"/> <!--declareb encodingu (et validaatorile sobiks)-->
+
     <title>Saturn</title>
     <!--Ikooni link: https://www.flaticon.com/free-icon/planet_3336008 -->
     <link rel="icon" href="images/saturn.png">
@@ -59,9 +61,7 @@
     <!--Siit hakkab parempoolne tulp-->
     <div class="tulp_parem">
         <div class="keskele">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/epZdZaEQhS0"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            <iframe src="https://www.youtube.com/embed/epZdZaEQhS0"allowfullscreen>
             </iframe>
 
             <div class="tühi_ruum"></div>
