--- a/taavi_vaheleht.html
+++ b/taavi_vaheleht.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8"/> <!--declareb encodingu (et validaatorile sobiks)-->
-    
+
     <title>Maa</title>
     <!--Ikoon saadud https://www.flaticon.com/premium-icon/earth_2949040-->
     <link rel="icon" href="images/maa.png">
@@ -36,14 +36,12 @@
     <div class="tulp_vasak">
         <div class="eemale_parem">
             <!--Siin on video-->
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/HCDVN7DCzYE"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            <iframe src="https://www.youtube.com/embed/HCDVN7DCzYE" allowfullscreen>
             </iframe>
             <!--Tekitab kahe asja vahele tühja ruumi-->
             <div class="tühi_ruum"></div>
-            <!--Maa gif-->
-            <img src="images/Maa_gif.gif" alt="Maa gif"/>
+            <!--Kuu gif, allikas: https://tenor.com/view/moon-earths-moon-outer-space-rotating-moon-man-in-the-moon-gif-19860769-->
+            <img src="images/kuu.gif" alt="Kuu gif"/>
         </div>
     </div>
 
@@ -72,6 +70,7 @@
                 Kreeka või Rooma mütoloogiast 
             </p>
             <p>Maa peal eksisteerib rohkem viiruseid kui universumis on tähti</p>
+            <p>Saab öelda, et peale Kuu on Maal veel kaks kaaslast, milleks on asteroidid</p>
         </div>
     </div>
 </div>
