validaatori rahuldamiseks paar parandust Kaarli lehele

--- a/kaarli_vaheleht.html
+++ b/kaarli_vaheleht.html
@@ -61,12 +61,12 @@
     <!--Siit hakkab parempoolne tulp-->
     <div class="tulp_parem">
         <div class="keskele">
-            <iframe src="https://www.youtube.com/embed/epZdZaEQhS0"allowfullscreen>
+            <iframe src="https://www.youtube.com/embed/epZdZaEQhS0" allowfullscreen>
             </iframe>
 
             <div class="tühi_ruum"></div>
             <!--algne GIF saadud: https://vsgif.com/gif/1504161 -->
-            <img IMG SRC="images/saturn.gif" alt="Saturni gif"/>
+            <img src="images/saturn.gif" alt="Saturni gif"/>
             
         </div>
     </div>
