--- a/pealeht.html
+++ b/pealeht.html
@@ -3,7 +3,7 @@
     <head>
         <title>Vahvad planeedid</title>
         <meta charset=UTF-8 />
-        <link rel="icon" href="images/galaxy.png"/>
+        <link rel="icon" href="images/galaxy.png"/> <!--Ikooni link: https://www.flaticon.com/premium-icon/galaxy_1534067 -->
         <link rel="stylesheet" type="text/css" href="pealehe_stiil.css"/>
     </head>
     <body>
