--- a/rasmuse_vaheleht.html
+++ b/rasmuse_vaheleht.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="utf-8"/> <!--declareb encodingu (et validaatorile sobiks)-->
-
     <title>Neptuun</title>
-    <!--Ikoon saadud -->
+    <!--Ikoon saadud https://www.flaticon.com/premium-icon/neptune_2193367-->
     <link rel="icon" href="images/neptuun.png"/>
     <link rel="stylesheet" type="text/css" href="rasmus.css" />
     <link rel="stylesheet" href="projekti_stiil.css">
@@ -13,9 +12,7 @@
 
 <body>
 
-
 <!--Headeri alla kuulud ülemine menüüriba-->
-
 <header>
     <div>
         <nav>
@@ -30,11 +27,9 @@
     </div>
 </header>
 
-
 <div class="eemale_vasak">
     <h1>NEPTUUN</h1> <!--Siin on pealkiri-->
 </div>
-
 
 <!--Siit hakkab vasakpoolne tulp-->
 <div class="tulp_vasak">
